desktop/assets/css/desktop.css
/* ... */
.window_full .window_inner {
  bottom: -1px;
}

/* `Table >> Data
----------------------------------------------------------------------------------------------------*/

table.data {
  width: 100%;
  white-space: nowrap;
}

table.data th,
table.data td {
  padding: 5px 10px;
  vertical-align: middle;
}

table.data th {
  background: #fff url(../images/gui/bar_top.png) repeat-x left bottom;
  border-left: 1px solid #fff;
  border-bottom: 1px solid #fff;
  font-weight: bold;
  text-shadow: #fff 0 1px 1px;
  white-space: nowrap;
}

table.data th:first-child {
  border-left: 0;
}

table.data img {
  display: block;
}

table.data tbody tr:nth-child(even) td {
  background: #def;
}

table.data tbody tr.active td {
  background: #06c url(../images/gui/bar_top_link.png) repeat-x;
  color: #fff;
}

th.shrink {
  width: 1%;
}

/* `Bar >> Top + Bottom
----------------------------------------------------------------------------------------------------*/

#bar_top,
#bar_bottom {
  font-weight: bold;
  padding: 0 10px;
  left: 0;
  right: 0;
}

#bar_top {
  background: #fff url(../images/gui/bar_top.png) repeat-x left bottom;
  border-bottom: 1px solid #333;
  color: #999;
  text-shadow: #fff 0 1px 1px;
  top: 0;
  height: 2.33vh;
  padding-top: 1vh;
  padding-bottom: 1vh;
  position: absolute;
}

#bar_bottom {
  background: #333 url(../images/gui/bar_bottom.png) repeat-x;
  border-top: 1px solid #fff;
  color: #fff;
  font-size: 13px;
  line-height: 30px;
  opacity: 0.8;
  overflow: hidden;
  text-shadow: #000 0 1px 1px;
  height: 30px;
  bottom: 0;
}

/* `Bar >> Links
----------------------------------------------------------------------------------------------------*/

#bar_top li,
#bar_bottom li {
  float: left;
}

#bar_top li a,
#bar_bottom li a {
  display: block;
  padding: 0 10px;
}

#bar_top li a {
  background-image: url(../images/gui/bar_top_link.png);
  background-repeat: no-repeat;
  background-position: -99999px -99999px;
  color: #000;
  overflow: hidden;
  min-height: 1px;
}

#bar_top a.active {
  background-color: #06c;
  background-position: 0 0;
  background-repeat: repeat-x;
  color: #fff;
  text-shadow: none;
}

#bar_top ul.menu {
  background: #eee;
  border: 1px solid #333;
  border-top-width: 0;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  -moz-border-radius-bottomleft: 5px;
  -moz-border-radius-bottomright: 5px;
  -webkit-border-bottom-left-radius: 5px;
  -webkit-border-bottom-right-radius: 5px;
  -webkit-background-clip: padding-box;
  display: none;
  font-weight: normal;
  margin: 1px 0 0 -1px;
  padding: 1px 1px 0;
  position: absolute;
  min-width: 200px;
  z-index: 30;
}

#bar_top ul.menu li {
  float: none;
}

#bar_top ul.menu a {
  background: #fff;
  border-bottom: 1px solid #eee;
  min-width: 180px;
  padding-top: 1vh;
  padding-bottom: 1vh;
}

#bar_top ul.menu li:last-child a {
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  -moz-border-radius-bottomleft: 5px;
  -moz-border-radius-bottomright: 5px;
  -webkit-border-bottom-left-radius: 5px;
  -webkit-border-bottom-right-radius: 5px;
  -webkit-background-clip: padding-box;
}

#bar_top ul.menu a:hover {
  background: #06c url(../images/gui/bar_top_link.png) repeat-x;
  color: #fff;
  text-shadow: none;
}

#bar_top li.emptyMenuCell {
  background-color: white;
}


#bar_bottom li {
  display: none;
  margin: 0 0 10px 5px;
  min-width: 150px;
}

#bar_bottom li a {
  background: #333;
}

#bar_bottom a {
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  -webkit-background-clip: padding-box;
  color: #fff;
  overflow: hidden;
  /* height: 30px; */
}

#show_desktop img {
  width: 22px;
  cursor: pointer;
}

#bar_bottom a:hover {
  background: #000;
}

#bar_bottom a:active {
  background: #c60;
  border: 1px solid #fff;
}

#bar_bottom li a img {
  float: left;
  margin: 4px 5px 0 -5px;
}

#bar_bottom .float_left img,
#bar_bottom .float_right img {
  display: block;
  padding: 4px 0 0;
}

/* `Wrapper + Desktop
----------------------------------------------------------------------------------------------------*/

#desktop {
  overflow: hidden;
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0px;
}

.desktop-shortcuts-container {
  display: inline-grid;
  grid-template-columns: auto auto auto;
  gap: 10px;
  /*
  background-color: #2196F3;
  */
  padding: 10px;
  height: 74vh;
  top: 5vh;
  position: absolute;
  overflow: none;
  width: 12vw;
}

.desktop-shortcuts-container > div {
  /*background-color: rgba(255, 255, 255, 0.8);*/
  text-align: center;
  font-size: 30px;
}

.desktop-shortcuts-container-folder {
  display: inline-grid;
  grid-template-columns: auto auto auto;
  gap: 10px;
  /*
  background-color: #2196F3;
  */
  padding: 10px;
  /* height: 74vh; */
  overflow: none;
  width: 66%;
  text-align: left;
}

.desktop-shortcuts-container-folder > div {
  /*background-color: rgba(255, 255, 255, 0.8);*/
  text-align: center;
  font-size: 30px;
}

#wrapper {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  min-width: 700px;
  min-height: 500px;
}


/* buddypond desktop ui elements */

/*
button {
  color: #00FF41;
  background-color: black;
}
*/

button:hover {
  cursor: pointer;
  color: purple;
}


a:hover {
  cursor: pointer;
  color: purple;
}

.purple {
  color: purple;
}

.green {
  color: #0D0208;
}

.error {
  border-color: red;
  color: red;
}

.invalidPassword {
  display: none;
}

.pointer {
  cursor: pointer;
}

.smaller {
  font-size: clamp(8px, 1vw, 18px);
}

.datetime {
  font-size: clamp(8px, 1vw, 18px);
  font-decoration: italic;
}

.desktopInput {
  padding: 6px;
  width: 9vw;
  text-decoration: none;
  font-size: clamp(12px, 0.8vw, 24px);
  margin: 4px 2px;
  border-radius: 4px;
}

.desktopConnected {
  display: none;
  color: #008F11;
}

.sendBuddyRequest {
}

.loginForm .desktopButton {
  width: 100%;
}

.desktopLink {
  cursor: pointer; 
}
/* ... */

